--- a/Cadres/app/src/main/res/layout/item_ty_zsty.xml
+++ b/Cadres/app/src/main/res/layout/item_ty_zsty.xml
@@ -40,7 +40,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="领导干部职数推演"
+            android:text="领导干部职级推演"
             app:layout_constraintTop_toTopOf="@+id/iv_zs_ldgb"
             app:layout_constraintBottom_toBottomOf="@+id/iv_zs_ldgb"
             app:layout_constraintStart_toStartOf="@+id/iv_zs_ldgb"
