--- a/Cadres/app/src/main/res/layout/activity_gb.xml
+++ b/Cadres/app/src/main/res/layout/activity_gb.xml
@@ -40,11 +40,16 @@
 
     <TextView
         android:id="@+id/tv_top_title"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:paddingStart="@dimen/dp_10"
+        android:paddingEnd="@dimen/dp_10"
+        android:textSize="@dimen/sp_14"
+        android:maxLines="2"
         app:layout_constraintStart_toStartOf="@+id/view_top_title"
         app:layout_constraintEnd_toEndOf="@+id/view_top_title"
         app:layout_constraintTop_toTopOf="@+id/view_top_title"
+        android:gravity="center"
         app:layout_constraintBottom_toTopOf="@+id/tv_top_btn"
         tools:text="title"/>
 
@@ -58,6 +63,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/view_top_title"
         android:background="@drawable/shape_b31f23_r5"
         android:textColor="@color/white"
+        android:textSize="@dimen/sp_14"
         android:paddingTop="@dimen/dp_5"
         android:paddingBottom="@dimen/dp_5"
         android:paddingStart="@dimen/dp_10"
@@ -79,6 +85,7 @@
         app:layout_constraintTop_toTopOf="@+id/view_top_title2"
         app:layout_constraintBottom_toTopOf="@+id/tv_top_sjpb"
         android:layout_marginStart="@dimen/dp_10"
+        android:textSize="@dimen/sp_14"
         app:layout_constraintStart_toStartOf="@+id/view_top_title2"
         android:text="核定职数："
         android:layout_height="wrap_content"/>
@@ -90,6 +97,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/tv_top_hdzs"
         app:layout_constraintStart_toEndOf="@+id/tv_top_hdzs"
         android:layout_marginEnd="@dimen/dp_10"
+        android:textSize="@dimen/sp_14"
         android:maxLines="2"
         app:layout_constraintEnd_toEndOf="@+id/view_top_title2"
         tools:text="核定职数核定职数核定定职数核定职数核数："
@@ -103,6 +111,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/view_top_title2"
         app:layout_constraintStart_toStartOf="@+id/view_top_title2"
         android:text="实际配备："
+        android:textSize="@dimen/sp_14"
         android:layout_height="wrap_content"/>
 
     <TextView
@@ -113,6 +122,7 @@
         app:layout_constraintStart_toEndOf="@+id/tv_top_sjpb"
         android:maxLines="2"
         android:layout_marginEnd="@dimen/dp_10"
+        android:textSize="@dimen/sp_14"
         app:layout_constraintEnd_toEndOf="@+id/view_top_title2"
         tools:text="实际配备实际配备备实际备备实际配备："
         android:layout_height="wrap_content"/>
@@ -145,6 +155,7 @@
         app:layout_constraintBottom_toTopOf="@+id/tv_top_kqqk"
         android:layout_marginStart="@dimen/dp_10"
         app:layout_constraintStart_toStartOf="@+id/view_top_title3"
+        android:textSize="@dimen/sp_14"
         android:text="超配情况："
         android:layout_height="wrap_content"/>
 
@@ -155,6 +166,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/tv_top_cpqk"
         app:layout_constraintStart_toEndOf="@+id/tv_top_cpqk"
         android:layout_marginEnd="@dimen/dp_10"
+        android:textSize="@dimen/sp_14"
         android:maxLines="2"
         app:layout_constraintEnd_toEndOf="@+id/view_top_title3"
         tools:text="核定职数核定职数核定定职数核定职数核数："
@@ -168,6 +180,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/view_top_title3"
         app:layout_constraintStart_toStartOf="@+id/view_top_title3"
         android:text="空缺情况："
+        android:textSize="@dimen/sp_14"
         android:layout_height="wrap_content"/>
 
     <TextView
@@ -177,6 +190,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/tv_top_kqqk"
         app:layout_constraintStart_toEndOf="@+id/tv_top_kqqk"
         android:maxLines="2"
+        android:textSize="@dimen/sp_14"
         android:layout_marginEnd="@dimen/dp_10"
         app:layout_constraintEnd_toEndOf="@+id/view_top_title3"
         tools:text="实际配备实际配备备实际备备实际配备："
