--- a/Cadres/app/src/main/res/layout/dialog_list_item2.xml
+++ b/Cadres/app/src/main/res/layout/dialog_list_item2.xml
@@ -8,6 +8,8 @@
     android:paddingStart="@dimen/dp_20"
     android:paddingEnd="@dimen/dp_20"
     android:paddingTop="@dimen/dp_10"
+    tools:background="@color/color_b31f23"
+    android:textSize="@dimen/sp_14"
     android:textColor="@color/white"
     android:paddingBottom="@dimen/dp_10"
     tools:text="标题">
