--- a/Cadres/app/src/main/res/layout/item_gb_left.xml
+++ b/Cadres/app/src/main/res/layout/item_gb_left.xml
@@ -7,6 +7,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:paddingStart="@dimen/dp_20"
     android:paddingEnd="@dimen/dp_20"
+    android:textSize="@dimen/sp_14"
     android:paddingTop="@dimen/dp_10"
     android:paddingBottom="@dimen/dp_10"
     tools:text="标题">
