--- a/Cadres/app/src/main/res/layout/activity_search_detail.xml
+++ b/Cadres/app/src/main/res/layout/activity_search_detail.xml
@@ -35,278 +35,19 @@
         app:layout_constraintStart_toStartOf="@+id/tv_search_content_tip"
         app:layout_constraintTop_toBottomOf="@+id/tv_search_content" />
 
-    <HorizontalScrollView
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+    <FrameLayout
         android:layout_marginStart="@dimen/dp_15"
         android:layout_marginEnd="@dimen/dp_15"
-        android:overScrollMode="never"
-        android:scrollbars="none"
-        android:fillViewport="true"
+        android:layout_width="0dp"
         android:layout_marginTop="@dimen/dp_10"
+        android:layout_marginBottom="@dimen/dp_20"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_search_count">
+        app:layout_constraintTop_toBottomOf="@+id/tv_search_count"
+        android:layout_height="0dp">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_marginBottom="@dimen/dp_20"
-            android:layout_height="match_parent">
+        <include layout="@layout/layout_gb_list_title"/>
+    </FrameLayout>
 
-            <androidx.constraintlayout.widget.Group
-                android:id="@+id/group_gb"
-                android:layout_width="wrap_content"
-                app:constraint_referenced_ids="
-                tv_xrzw,tv_xrzsj,tv_xrzwcc,tv_xrzwccsj"
-                android:visibility="gone"
-                tools:visibility="visible"
-                android:layout_height="wrap_content"/>
-
-            <androidx.constraintlayout.widget.Group
-                android:id="@+id/group_gwy"
-                android:layout_width="wrap_content"
-                app:constraint_referenced_ids="
-                tv_rzjqssj,tv_cjgzsj"
-                android:visibility="gone"
-                tools:visibility="visible"
-                android:layout_height="wrap_content"/>
-
-            <View
-                android:id="@+id/view_title"
-                android:layout_width="0dp"
-                android:layout_height="@dimen/dp_75"
-                android:background="@color/color_ffe5ce"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-            <!--单位名称-->
-            <TextView
-                android:id="@+id/tv_img"
-                android:layout_width="@dimen/dp_100"
-                android:layout_height="0dp"
-                android:gravity="center"
-                android:textSize="@dimen/sp_12"
-                app:layout_constraintStart_toStartOf="@+id/view_title"
-                app:layout_constraintTop_toTopOf="@+id/view_title"
-                app:layout_constraintBottom_toBottomOf="@+id/view_title"
-                tools:text="头像"/>
-
-            <TextView
-                android:id="@+id/tv_name"
-                android:layout_width="@dimen/dp_50"
-                android:layout_height="0dp"
-                android:gravity="center"
-                android:textSize="@dimen/sp_12"
-                android:paddingStart="@dimen/dp_5"
-                android:paddingEnd="@dimen/dp_5"
-                app:layout_constraintStart_toEndOf="@+id/tv_img"
-                app:layout_constraintTop_toTopOf="@+id/view_title"
-                app:layout_constraintBottom_toBottomOf="@+id/view_title"
-                android:text="姓名"/>
-
-            <TextView
-                android:id="@+id/tv_xrzw"
-                android:layout_width="@dimen/dp_120"
-                android:layout_height="0dp"
-                android:gravity="center"
-                android:textSize="@dimen/sp_12"
-                android:maxLines="3"
-                android:paddingStart="@dimen/dp_5"
-                android:paddingEnd="@dimen/dp_5"
-                app:layout_constraintStart_toEndOf="@+id/tv_name"
-                app:layout_constraintTop_toTopOf="@+id/view_title"
-                app:layout_constraintBottom_toBottomOf="@+id/view_title"
-                android:text="现任职务"/>
-
-            <TextView
-                android:id="@+id/tv_xrzsj"
-                android:layout_width="@dimen/dp_70"
-                android:layout_height="0dp"
-                android:textSize="@dimen/sp_12"
-                android:gravity="center"
-                android:paddingStart="@dimen/dp_5"
-                android:paddingEnd="@dimen/dp_5"
-                app:layout_constraintStart_toEndOf="@+id/tv_xrzw"
-                app:layout_constraintTop_toTopOf="@+id/view_title"
-                app:layout_constraintBottom_toBottomOf="@+id/view_title"
-                android:text="任现职\n时间"/>
-
-            <TextView
-                android:id="@+id/tv_xrzwcc"
-                android:layout_width="@dimen/dp_70"
-                android:layout_height="0dp"
-                android:textSize="@dimen/sp_12"
-                android:gravity="center"
-                android:paddingStart="@dimen/dp_5"
-                android:paddingEnd="@dimen/dp_5"
-                app:layout_constraintStart_toEndOf="@+id/tv_xrzsj"
-                app:layout_constraintTop_toTopOf="@+id/view_title"
-                app:layout_constraintBottom_toBottomOf="@+id/view_title"
-                android:text="现任职务\n层次"/>
-
-            <TextView
-                android:id="@+id/tv_xrzwccsj"
-                android:layout_width="@dimen/dp_70"
-                android:layout_height="0dp"
-                android:textSize="@dimen/sp_12"
-                android:gravity="center"
-                android:paddingStart="@dimen/dp_5"
-                android:paddingEnd="@dimen/dp_5"
-                app:layout_constraintStart_toEndOf="@+id/tv_xrzwcc"
-                app:layout_constraintTop_toTopOf="@+id/view_title"
-                app:layout_constraintBottom_toBottomOf="@+id/view_title"
-                android:text="任现职务\n层次时间"/>
-
-            <TextView
-                android:id="@+id/tv_zwjb"
-                android:layout_width="@dimen/dp_70"
-                android:layout_height="0dp"
-                android:textSize="@dimen/sp_12"
-                android:gravity="center"
-                android:paddingStart="@dimen/dp_5"
-                android:paddingEnd="@dimen/dp_5"
-                app:layout_constraintStart_toEndOf="@+id/tv_xrzwccsj"
-                app:layout_constraintTop_toTopOf="@+id/view_title"
-                app:layout_constraintBottom_toBottomOf="@+id/view_title"
-                android:text="现任职级"/>
-
-            <TextView
-                android:id="@+id/tv_rzjsj"
-                android:layout_width="@dimen/dp_70"
-                android:layout_height="0dp"
-                android:textSize="@dimen/sp_12"
-                android:gravity="center"
-                android:paddingStart="@dimen/dp_5"
-                android:paddingEnd="@dimen/dp_5"
-                app:layout_constraintStart_toEndOf="@+id/tv_zwjb"
-                app:layout_constraintTop_toTopOf="@+id/view_title"
-                app:layout_constraintBottom_toBottomOf="@+id/view_title"
-                android:text="任现职级\n时间"/>
-
-            <TextView
-                android:id="@+id/tv_rzjqssj"
-                android:layout_width="@dimen/dp_70"
-                android:layout_height="0dp"
-                android:textSize="@dimen/sp_12"
-                android:gravity="center"
-                android:paddingStart="@dimen/dp_5"
-                android:paddingEnd="@dimen/dp_5"
-                app:layout_constraintStart_toEndOf="@+id/tv_rzjsj"
-                app:layout_constraintTop_toTopOf="@+id/view_title"
-                app:layout_constraintBottom_toBottomOf="@+id/view_title"
-                android:text="任现职级\n起算时间"/>
-
-            <TextView
-                android:id="@+id/tv_cjgzsj"
-                android:layout_width="@dimen/dp_70"
-                android:layout_height="0dp"
-                android:textSize="@dimen/sp_12"
-                android:gravity="center"
-                android:paddingStart="@dimen/dp_5"
-                android:paddingEnd="@dimen/dp_5"
-                app:layout_constraintStart_toEndOf="@+id/tv_rzjqssj"
-                app:layout_constraintTop_toTopOf="@+id/view_title"
-                app:layout_constraintBottom_toBottomOf="@+id/view_title"
-                android:text="参加工作\n时间"/>
-
-            <TextView
-                android:id="@+id/tv_sex"
-                android:layout_width="@dimen/dp_40"
-                android:layout_height="0dp"
-                android:textSize="@dimen/sp_12"
-                android:gravity="center"
-                android:paddingStart="@dimen/dp_5"
-                android:paddingEnd="@dimen/dp_5"
-                app:layout_constraintStart_toEndOf="@+id/tv_cjgzsj"
-                app:layout_constraintTop_toTopOf="@+id/view_title"
-                app:layout_constraintBottom_toBottomOf="@+id/view_title"
-                android:text="性别"/>
-
-            <TextView
-                android:id="@+id/tv_place"
-                android:layout_width="@dimen/dp_50"
-                android:layout_height="0dp"
-                android:textSize="@dimen/sp_12"
-                android:gravity="center"
-                android:paddingStart="@dimen/dp_5"
-                android:paddingEnd="@dimen/dp_5"
-                app:layout_constraintStart_toEndOf="@+id/tv_sex"
-                app:layout_constraintTop_toTopOf="@+id/view_title"
-                app:layout_constraintBottom_toBottomOf="@+id/view_title"
-                android:text="籍贯"/>
-
-            <TextView
-                android:id="@+id/tv_csny"
-                android:layout_width="@dimen/dp_70"
-                android:layout_height="0dp"
-                android:textSize="@dimen/sp_12"
-                android:gravity="center"
-                android:paddingStart="@dimen/dp_5"
-                android:paddingEnd="@dimen/dp_5"
-                app:layout_constraintStart_toEndOf="@+id/tv_place"
-                app:layout_constraintTop_toTopOf="@+id/view_title"
-                app:layout_constraintBottom_toBottomOf="@+id/view_title"
-                android:text="出生年月\n(年龄)"/>
-
-            <TextView
-                android:id="@+id/tv_qrzwhcd"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:textSize="@dimen/sp_12"
-                android:gravity="center"
-                android:paddingStart="@dimen/dp_5"
-                android:paddingEnd="@dimen/dp_5"
-                app:layout_constraintStart_toEndOf="@+id/tv_csny"
-                app:layout_constraintEnd_toStartOf="@+id/tv_qrzzy"
-                app:layout_constraintTop_toTopOf="@+id/view_title"
-                app:layout_constraintBottom_toBottomOf="@+id/view_title"
-                android:text="全日制\n文化程度"/>
-
-            <TextView
-                android:id="@+id/tv_qrzzy"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:textSize="@dimen/sp_12"
-                android:gravity="center"
-                android:paddingStart="@dimen/dp_5"
-                android:paddingEnd="@dimen/dp_5"
-                app:layout_constraintStart_toEndOf="@+id/tv_qrzwhcd"
-                app:layout_constraintEnd_toStartOf="@+id/tv_zzwhcd"
-                app:layout_constraintTop_toTopOf="@+id/view_title"
-                app:layout_constraintBottom_toBottomOf="@+id/view_title"
-                android:text="全日制\n专业"/>
-
-            <TextView
-                android:id="@+id/tv_zzwhcd"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:textSize="@dimen/sp_12"
-                android:gravity="center"
-                android:paddingStart="@dimen/dp_5"
-                android:paddingEnd="@dimen/dp_5"
-                app:layout_constraintStart_toEndOf="@+id/tv_qrzzy"
-                app:layout_constraintEnd_toEndOf="@+id/view_title"
-                app:layout_constraintTop_toTopOf="@+id/view_title"
-                app:layout_constraintBottom_toBottomOf="@+id/view_title"
-                android:text="在职\n文化程度"/>
-
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recycler_view"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:orientation="vertical"
-                android:overScrollMode="never"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="@+id/view_title"
-                app:layout_constraintStart_toStartOf="@+id/view_title"
-                app:layout_constraintTop_toBottomOf="@+id/view_title" />
-
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-    </HorizontalScrollView>
-    
 </androidx.constraintlayout.widget.ConstraintLayout>
