--- a/Cadres/app/src/main/res/layout/item_ty_zsty.xml
+++ b/Cadres/app/src/main/res/layout/item_ty_zsty.xml
@@ -191,24 +191,9 @@
             android:layout_height="@dimen/dp_40">
 
             <View
-                android:background="@mipmap/ic_legend_blue"
-                android:layout_width="@dimen/dp_20"
-                android:layout_height="@dimen/dp_20"
-                />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="@dimen/sp_14"
-                android:layout_marginStart="@dimen/dp_10"
-                android:text="乡科级正职"
-                android:textColor="@color/color_23cefd"/>
-
-            <View
                 android:background="@mipmap/ic_legend_red"
                 android:layout_width="@dimen/dp_20"
                 android:layout_height="@dimen/dp_20"
-                android:layout_marginStart="@dimen/dp_30"
                 />
 
             <TextView
@@ -216,7 +201,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/sp_14"
                 android:layout_marginStart="@dimen/dp_10"
-                android:text="乡科级副职"
+                android:text="年轻干部"
                 android:textColor="@color/color_23cefd"/>
 
         </LinearLayout>
