--- a/Cadres/app/src/main/res/layout/activity_dsjty.xml
+++ b/Cadres/app/src/main/res/layout/activity_dsjty.xml
@@ -199,49 +199,24 @@
         android:textColor="@color/color_23cffd"
         android:text="首页"/>
 
-    <androidx.constraintlayout.widget.Group
-        android:id="@+id/group_dialog"
-        android:layout_width="wrap_content"
-        app:constraint_referenced_ids="tv_dialog,iv_dialog_bg"
-        android:visibility="visible"
-        android:layout_height="wrap_content"/>
-
-    <TextView
-        android:id="@+id/tv_dialog"
-        android:layout_width="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/view_title_bg"
-        app:layout_constraintStart_toStartOf="@+id/view_title_bg"
-        app:layout_constraintEnd_toEndOf="@+id/view_title_bg"
-        tools:text="市人大常委"
-        android:textColor="@color/white"
-        android:drawableRight="@mipmap/ic_down2"
-        android:drawablePadding="@dimen/dp_10"
-        android:textSize="@dimen/sp_20"
-        android:layout_height="wrap_content"/>
-
-    <ImageView
-        android:id="@+id/iv_dialog_bg"
-        app:layout_constraintEnd_toEndOf="@+id/tv_dialog"
-        app:layout_constraintStart_toStartOf="@+id/tv_dialog"
-        android:src="@mipmap/ic_ty_dialog_bg"
-        app:layout_constraintTop_toBottomOf="@+id/tv_dialog"
-        android:layout_width="@dimen/dp_230"
-        android:layout_height="@dimen/dp_26"/>
-
-
     <FrameLayout
         android:id="@+id/fl_layout"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/iv_dialog_bg"
+        app:layout_constraintTop_toBottomOf="@+id/view_title_bg"
         android:layout_margin="@dimen/dp_20"
         app:layout_constraintBottom_toBottomOf="parent">
 
-        <include layout="@layout/item_ty_zsty"/>
-        <include layout="@layout/item_ty_jgty"/>
-        <include layout="@layout/item_ty_swbz"/>
+        <com.example.cadres.widget.NoScrollViewPager
+            android:id="@+id/viewpager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+<!--        <include layout="@layout/item_ty_zsty"/>-->
+<!--        <include layout="@layout/item_ty_jgty"/>-->
+<!--        <include layout="@layout/item_ty_swbz"/>-->
 
     </FrameLayout>
 
