--- a/Cadres/app/src/main/res/layout/item_ty_zsty.xml
+++ b/Cadres/app/src/main/res/layout/item_ty_zsty.xml
@@ -68,23 +68,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/dp_10"
-                android:text="调整到空缺职位任职"
+                android:text="职级晋升和调整消化"
                 android:textSize="@dimen/sp_14"
-                android:textColor="@color/color_23cefd"/>
-
-            <View
-                android:background="@color/color_01B7FF"
-                android:layout_width="@dimen/dp_20"
-                android:layout_height="@dimen/dp_15"
-                android:layout_marginStart="@dimen/dp_30"
-                />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/dp_10"
-                android:textSize="@dimen/sp_14"
-                android:text="职务与职级并行"
                 android:textColor="@color/color_23cefd"/>
 
             <View
