5、大数据推演中年轻干部配备推演中的图例名称改为35岁及以下年轻干部，图中添加点击效果，点击后，需要展示乡科级正职数量、乡科级副职数量、90后数量（参考原型）

--- a/Cadres/app/src/main/res/layout/item_ty_zsty.xml
+++ b/Cadres/app/src/main/res/layout/item_ty_zsty.xml
@@ -157,7 +157,7 @@
             android:id="@+id/tv_zs_nqgb"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="年轻干部配备推演"
+            android:text="35岁及以下年轻干部"
             app:layout_constraintTop_toTopOf="@+id/iv_zs_nqgb"
             app:layout_constraintBottom_toBottomOf="@+id/iv_zs_nqgb"
             app:layout_constraintStart_toStartOf="@+id/iv_zs_nqgb"
